// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyBoardProvider Down outside range of number of Children  1`] = `
<div
  role="option"
>
  <div
    data-isfocues="false"
    data-testid="button0"
  >
    Testing1
  </div>
  <div
    data-isfocues="true"
    data-testid="button1"
  >
    Testing2
  </div>
  <div
    data-isfocues="false"
    data-testid="button2"
  >
    Testing3
  </div>
  <div
    data-isfocues="false"
    data-testid="button3"
  >
    Testing4
  </div>
</div>
`;

exports[`KeyBoardProvider Down outside range of number of Children  2`] = `
<div
  role="option"
>
  <div
    data-isfocues="false"
    data-testid="button0"
  >
    Testing1
  </div>
  <div
    data-isfocues="false"
    data-testid="button1"
  >
    Testing2
  </div>
  <div
    data-isfocues="false"
    data-testid="button2"
  >
    Testing3
  </div>
  <div
    data-isfocues="false"
    data-testid="button3"
  >
    Testing4
  </div>
</div>
`;

exports[`KeyBoardProvider Down within range of number of Children 1`] = `
<div
  role="option"
>
  <div
    data-isfocues="false"
    data-testid="button0"
  >
    Testing1
  </div>
  <div
    data-isfocues="true"
    data-testid="button1"
  >
    Testing2
  </div>
  <div
    data-isfocues="false"
    data-testid="button2"
  >
    Testing3
  </div>
  <div
    data-isfocues="false"
    data-testid="button3"
  >
    Testing4
  </div>
</div>
`;

exports[`KeyBoardProvider Up outside range of number of Children  1`] = `
<div
  role="option"
>
  <div
    data-isfocues="false"
    data-testid="button0"
  >
    Testing1
  </div>
  <div
    data-isfocues="false"
    data-testid="button1"
  >
    Testing2
  </div>
  <div
    data-isfocues="false"
    data-testid="button2"
  >
    Testing3
  </div>
  <div
    data-isfocues="true"
    data-testid="button3"
  >
    Testing4
  </div>
</div>
`;

exports[`KeyBoardProvider Up within range of number of Children 1`] = `
<div
  role="option"
>
  <div
    data-isfocues="false"
    data-testid="button0"
  >
    Testing1
  </div>
  <div
    data-isfocues="false"
    data-testid="button1"
  >
    Testing2
  </div>
  <div
    data-isfocues="true"
    data-testid="button2"
  >
    Testing3
  </div>
  <div
    data-isfocues="false"
    data-testid="button3"
  >
    Testing4
  </div>
</div>
`;
